[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/UI_logic/Options_logic.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/UI_themes/Default_theme.tres" type="Theme" id=2]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player.gd" type="Script" id=3]
[ext_resource path="res://Sounds/SFX/click_sound_press.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/SFX/click_sound_hover.wav" type="AudioStream" id=5]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.392157 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
anti_aliasing = false

[node name="Options" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 352, 224 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_top = -53.0
margin_right = 124.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 248.0
margin_bottom = 15.0
theme = ExtResource( 2 )
text = "Music"
align = 1

[node name="Music" type="HSlider" parent="VBoxContainer"]
margin_top = 19.0
margin_right = 248.0
margin_bottom = 51.0
theme = ExtResource( 2 )
min_value = -80.0
max_value = 0.0

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 248.0
margin_bottom = 70.0
theme = ExtResource( 2 )
text = "SFX"
align = 1

[node name="SFX" type="HSlider" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 248.0
margin_bottom = 106.0
theme = ExtResource( 2 )
min_value = -80.0
max_value = 0.0

[node name="Fullscreen" type="CheckBox" parent="VBoxContainer"]
margin_top = 110.0
margin_right = 248.0
margin_bottom = 142.0
theme = ExtResource( 2 )
custom_styles/hover_pressed = SubResource( 5 )
text = "Fullscreen"

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 146.0
margin_right = 248.0
margin_bottom = 146.0
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
__meta__ = {
"_editor_description_": ""
}

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_top = 150.0
margin_right = 248.0
margin_bottom = 150.0
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
__meta__ = {
"_editor_description_": ""
}

[node name="Control3" type="Control" parent="VBoxContainer"]
margin_top = 154.0
margin_right = 248.0
margin_bottom = 154.0
size_flags_vertical = 3
size_flags_stretch_ratio = 20.0
__meta__ = {
"_editor_description_": ""
}

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 158.0
margin_right = 248.0
margin_bottom = 179.0
theme = ExtResource( 2 )
text = "Back"

[node name="Appear" type="Tween" parent="."]

[node name="Disappear" type="Tween" parent="."]

[node name="Hover" type="AudioStreamPlayer" parent="."]
bus = "SFX-UI"
script = ExtResource( 3 )
samples = [ ExtResource( 5 ) ]
random_strategy = 1
random_pitch_range = 0.5

[node name="Press" type="AudioStreamPlayer" parent="."]
bus = "SFX-UI"
script = ExtResource( 3 )
samples = [ ExtResource( 4 ) ]
random_strategy = 1
random_pitch_range = 0.5

[connection signal="value_changed" from="VBoxContainer/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFX" to="." method="_on_SFX_value_changed"]
[connection signal="toggled" from="VBoxContainer/Fullscreen" to="." method="_on_Fullscreen_toggled"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="tween_all_completed" from="Disappear" to="." method="_on_Disappear_tween_all_completed"]
